--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="clock">
-        <div class="hand second"></div>
+        <div class="hand seconds"></div>
         <div class="hand minutes"></div>
         <div class="hand hours"></div>
 
@@ -28,9 +28,7 @@
         <div class="div number number-10">10</div>
         <div class="div number number-11">11</div>
         <div class="div number number-12">12</div>
-    </div>
-
-    
+    </div> 
 </body>
 <script src="js/script.js"></script>
 </html>
